tests/errors/end_module_name.f90
module name1
    implicit none
end module name2
